internal/lang/iantlr/alr/gorchlang_parser.go
// Code generated from gorchlang.g4 by ANTLR 4.13.2. DO NOT EDIT.

package alr // gorchlang
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type gorchlangParser struct {
	*antlr.BaseParser
}

var GorchlangParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func gorchlangParserInit() {
	staticData := &GorchlangParserStaticData
	staticData.LiteralNames = []string{
		"", "'START'", "'('", "','", "')'", "'{'", "'}'", "'FRAGMENT'", "'REGISTER'",
		"'ON_FINISH'", "'->'", "'['", "']'", "'UNFOLD'", "'GO'", "'WAIT'", "'NO_CHECK_MISS'",
		"'SKIP'", "'|'", "'SWITCH'", "'CASE'", "'=>'", "'OPERATOR'", "'='",
		"'@'", "'-'", "'s'", "'ms'", "'\\u00B5s'", "'h'", "'m'",
	}
	staticData.SymbolicNames = []string{
		"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "",
		"", "", "", "", "", "", "", "", "", "", "", "", "", "", "TRUE", "FALSE",
		"ID", "INT", "DQUOTA_STRING", "LINE_COMMENT", "COMMENT", "TERMINATOR",
		"WS",
	}
	staticData.RuleNames = []string{
		"primary", "startDirective", "fragmentDirective", "registerDirective",
		"onFinishStmt", "exedescStmt", "leafSnippet", "operatorStmt", "serialStmt",
		"serialBracketStmt", "concurrentStmt", "unfoldDirective", "goDirective",
		"waitDirective", "noCheckMissDirective", "skipDirective", "wrapStmt",
		"wrapBracketStmt", "switchDirective", "switchCaseDirective", "registerOperatorDirective",
		"argStmt", "argsStmt", "ignoreError", "integerLiteral", "stringLiteral",
		"boolLiteral", "durationLiteral",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// gorchlangParserInit initializes any static state used to implement gorchlangParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewgorchlangParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func GorchlangParserInit() {
	staticData := &GorchlangParserStaticData
	staticData.once.Do(gorchlangParserInit)
}

// NewgorchlangParser produces a new parser instance for the optional input antlr.TokenStream.
func NewgorchlangParser(input antlr.TokenStream) *gorchlangParser {
	GorchlangParserInit()
	this := new(gorchlangParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &GorchlangParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "gorchlang.g4"

	return this
}

// gorchlangParser tokens.
const (
	gorchlangParserEOF           = antlr.TokenEOF
	gorchlangParserT__0          = 1
	gorchlangParserT__1          = 2
	gorchlangParserT__2          = 3
	gorchlangParserT__3          = 4
	gorchlangParserT__4          = 5
	gorchlangParserT__5          = 6
	gorchlangParserT__6          = 7
	gorchlangParserT__7          = 8
	gorchlangParserT__8          = 9
	gorchlangParserT__9          = 10
	gorchlangParserT__10         = 11
	gorchlangParserT__11         = 12
	gorchlangParserT__12         = 13
	gorchlangParserT__13         = 14
	gorchlangParserT__14         = 15
	gorchlangParserT__15         = 16
	gorchlangParserT__16         = 17
	gorchlangParserT__17         = 18
	gorchlangParserT__18         = 19
	gorchlangParserT__19         = 20
	gorchlangParserT__20         = 21
	gorchlangParserT__21         = 22
	gorchlangParserT__22         = 23
	gorchlangParserT__23         = 24
	gorchlangParserT__24         = 25
	gorchlangParserT__25         = 26
	gorchlangParserT__26         = 27
	gorchlangParserT__27         = 28
	gorchlangParserT__28         = 29
	gorchlangParserT__29         = 30
	gorchlangParserTRUE          = 31
	gorchlangParserFALSE         = 32
	gorchlangParserID            = 33
	gorchlangParserINT           = 34
	gorchlangParserDQUOTA_STRING = 35
	gorchlangParserLINE_COMMENT  = 36
	gorchlangParserCOMMENT       = 37
	gorchlangParserTERMINATOR    = 38
	gorchlangParserWS            = 39
)

// gorchlangParser rules.
const (
	gorchlangParserRULE_primary                   = 0
	gorchlangParserRULE_startDirective            = 1
	gorchlangParserRULE_fragmentDirective         = 2
	gorchlangParserRULE_registerDirective         = 3
	gorchlangParserRULE_onFinishStmt              = 4
	gorchlangParserRULE_exedescStmt               = 5
	gorchlangParserRULE_leafSnippet               = 6
	gorchlangParserRULE_operatorStmt              = 7
	gorchlangParserRULE_serialStmt                = 8
	gorchlangParserRULE_serialBracketStmt         = 9
	gorchlangParserRULE_concurrentStmt            = 10
	gorchlangParserRULE_unfoldDirective           = 11
	gorchlangParserRULE_goDirective               = 12
	gorchlangParserRULE_waitDirective             = 13
	gorchlangParserRULE_noCheckMissDirective      = 14
	gorchlangParserRULE_skipDirective             = 15
	gorchlangParserRULE_wrapStmt                  = 16
	gorchlangParserRULE_wrapBracketStmt           = 17
	gorchlangParserRULE_switchDirective           = 18
	gorchlangParserRULE_switchCaseDirective       = 19
	gorchlangParserRULE_registerOperatorDirective = 20
	gorchlangParserRULE_argStmt                   = 21
	gorchlangParserRULE_argsStmt                  = 22
	gorchlangParserRULE_ignoreError               = 23
	gorchlangParserRULE_integerLiteral            = 24
	gorchlangParserRULE_stringLiteral             = 25
	gorchlangParserRULE_boolLiteral               = 26
	gorchlangParserRULE_durationLiteral           = 27
)

// IPrimaryContext is an interface to support dynamic dispatch.
type IPrimaryContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllStartDirective() []IStartDirectiveContext
	StartDirective(i int) IStartDirectiveContext
	AllFragmentDirective() []IFragmentDirectiveContext
	FragmentDirective(i int) IFragmentDirectiveContext
	AllRegisterDirective() []IRegisterDirectiveContext
	RegisterDirective(i int) IRegisterDirectiveContext

	// IsPrimaryContext differentiates from other interfaces.
	IsPrimaryContext()
}

type PrimaryContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyPrimaryContext() *PrimaryContext {
	var p = new(PrimaryContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = gorchlangParserRULE_primary
	return p
}

func InitEmptyPrimaryContext(p *PrimaryContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = gorchlangParserRULE_primary
}

func (*PrimaryContext) IsPrimaryContext() {}

func NewPrimaryContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *PrimaryContext {
	var p = new(PrimaryContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = gorchlangParserRULE_primary

	return p
}

func (s *PrimaryContext) GetParser() antlr.Parser { return s.parser }

func (s *PrimaryContext) AllStartDirective() []IStartDirectiveContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IStartDirectiveContext); ok {
			len++
		}
	}

	tst := make([]IStartDirectiveContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IStartDirectiveContext); ok {
			tst[i] = t.(IStartDirectiveContext)
			i++
		}
	}

	return tst
}

func (s *PrimaryContext) StartDirective(i int) IStartDirectiveContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IStartDirectiveContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IStartDirectiveContext)
}

func (s *PrimaryContext) AllFragmentDirective() []IFragmentDirectiveContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IFragmentDirectiveContext); ok {
			len++
		}
	}

	tst := make([]IFragmentDirectiveContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IFragmentDirectiveContext); ok {
			tst[i] = t.(IFragmentDirectiveContext)
			i++
		}
	}

	return tst
}

func (s *PrimaryContext) FragmentDirective(i int) IFragmentDirectiveContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFragmentDirectiveContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFragmentDirectiveContext)
}

func (s *PrimaryContext) AllRegisterDirective() []IRegisterDirectiveContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IRegisterDirectiveContext); ok {
			len++
		}
	}

	tst := make([]IRegisterDirectiveContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IRegisterDirectiveContext); ok {
			tst[i] = t.(IRegisterDirectiveContext)
			i++
		}
	}

	return tst
}

func (s *PrimaryContext) RegisterDirective(i int) IRegisterDirectiveContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IRegisterDirectiveContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IRegisterDirectiveContext)
}

func (s *PrimaryContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *PrimaryContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *PrimaryContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(gorchlangListener); ok {
		listenerT.EnterPrimary(s)
	}
}

func (s *PrimaryContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(gorchlangListener); ok {
		listenerT.ExitPrimary(s)
	}
}

func (p *gorchlangParser) Primary() (localctx IPrimaryContext) {
	localctx = NewPrimaryContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, gorchlangParserRULE_primary)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(62)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for (int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&386) != 0 {
		p.SetState(60)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}

		switch p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 0, p.GetParserRuleContext()) {
		case 1:
			{
				p.SetState(56)
				p.StartDirective()
			}

		case 2:
			{
				p.SetState(57)
				p.FragmentDirective()
			}

		case 3:
			{
				p.SetState(58)
				p.RegisterDirective()
			}

		case 4:
			{
				p.SetState(59)
				p.RegisterDirective()
			}

		case antlr.ATNInvalidAltNumber:
			goto errorExit
		}

		p.SetState(64)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IStartDirectiveContext is an interface to support dynamic dispatch.
type IStartDirectiveContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// GetName returns the name rule contexts.
	GetName() IStringLiteralContext

	// SetName sets the name rule contexts.
	SetName(IStringLiteralContext)

	// Getter signatures
	ExedescStmt() IExedescStmtContext
	StringLiteral() IStringLiteralContext
	ArgsStmt() IArgsStmtContext
	NoCheckMissDirective() INoCheckMissDirectiveContext
	OnFinishStmt() IOnFinishStmtContext

	// IsStartDirectiveContext differentiates from other interfaces.
	IsStartDirectiveContext()
}

type StartDirectiveContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
	name   IStringLiteralContext
}

func NewEmptyStartDirectiveContext() *StartDirectiveContext {
	var p = new(StartDirectiveContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = gorchlangParserRULE_startDirective
	return p
}

func InitEmptyStartDirectiveContext(p *StartDirectiveContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = gorchlangParserRULE_startDirective
}

func (*StartDirectiveContext) IsStartDirectiveContext() {}

func NewStartDirectiveContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *StartDirectiveContext {
	var p = new(StartDirectiveContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = gorchlangParserRULE_startDirective

	return p
}

func (s *StartDirectiveContext) GetParser() antlr.Parser { return s.parser }

func (s *StartDirectiveContext) GetName() IStringLiteralContext { return s.name }

func (s *StartDirectiveContext) SetName(v IStringLiteralContext) { s.name = v }

func (s *StartDirectiveContext) ExedescStmt() IExedescStmtContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IExedescStmtContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IExedescStmtContext)
}

func (s *StartDirectiveContext) StringLiteral() IStringLiteralContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IStringLiteralContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IStringLiteralContext)
}

func (s *StartDirectiveContext) ArgsStmt() IArgsStmtContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IArgsStmtContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IArgsStmtContext)
}

func (s *StartDirectiveContext) NoCheckMissDirective() INoCheckMissDirectiveContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(INoCheckMissDirectiveContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(INoCheckMissDirectiveContext)
}

func (s *StartDirectiveContext) OnFinishStmt() IOnFinishStmtContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IOnFinishStmtContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IOnFinishStmtContext)
}

func (s *StartDirectiveContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *StartDirectiveContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *StartDirectiveContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(gorchlangListener); ok {
		listenerT.EnterStartDirective(s)
	}
}

func (s *StartDirectiveContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(gorchlangListener); ok {
		listenerT.ExitStartDirective(s)
	}
}

func (p *gorchlangParser) StartDirective() (localctx IStartDirectiveContext) {
	localctx = NewStartDirectiveContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, gorchlangParserRULE_startDirective)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(65)
		p.Match(gorchlangParserT__0)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(66)
		p.Match(gorchlangParserT__1)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

	{
		p.SetState(67)

		var _x = p.StringLiteral()

		localctx.(*StartDirectiveContext).name = _x
	}

	p.SetState(70)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	if _la == gorchlangParserT__2 {
		{
			p.SetState(68)
			p.Match(gorchlangParserT__2)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(69)
			p.ArgsStmt()
		}

	}
	{
		p.SetState(72)
		p.Match(gorchlangParserT__3)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(73)
		p.Match(gorchlangParserT__4)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	p.SetState(82)
	p.GetErrorHandler().Sync(p)

	if p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 3, p.GetParserRuleContext()) == 1 {
		{
			p.SetState(74)
			p.OnFinishStmt()
		}
		{
			p.SetState(75)
			p.NoCheckMissDirective()
		}

	} else if p.HasError() { // JIM
		goto errorExit
	} else if p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 3, p.GetParserRuleContext()) == 2 {
		{
			p.SetState(77)
			p.NoCheckMissDirective()
		}
		{
			p.SetState(78)
			p.OnFinishStmt()
		}

	} else if p.HasError() { // JIM
		goto errorExit
	} else if p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 3, p.GetParserRuleContext()) == 3 {
		{
			p.SetState(80)
			p.NoCheckMissDirective()
		}

	} else if p.HasError() { // JIM
		goto errorExit
	} else if p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 3, p.GetParserRuleContext()) == 4 {
		{
			p.SetState(81)
			p.OnFinishStmt()
		}

	} else if p.HasError() { // JIM
		goto errorExit
	}
	{
		p.SetState(84)
		p.ExedescStmt()
	}
	{
		p.SetState(85)
		p.Match(gorchlangParserT__5)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IFragmentDirectiveContext is an interface to support dynamic dispatch.
type IFragmentDirectiveContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// GetName returns the name rule contexts.
	GetName() IStringLiteralContext

	// SetName sets the name rule contexts.
	SetName(IStringLiteralContext)

	// Getter signatures
	ExedescStmt() IExedescStmtContext
	StringLiteral() IStringLiteralContext

	// IsFragmentDirectiveContext differentiates from other interfaces.
	IsFragmentDirectiveContext()
}

type FragmentDirectiveContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
	name   IStringLiteralContext
}

func NewEmptyFragmentDirectiveContext() *FragmentDirectiveContext {
	var p = new(FragmentDirectiveContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = gorchlangParserRULE_fragmentDirective
	return p
}

func InitEmptyFragmentDirectiveContext(p *FragmentDirectiveContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = gorchlangParserRULE_fragmentDirective
}

func (*FragmentDirectiveContext) IsFragmentDirectiveContext() {}

func NewFragmentDirectiveContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *FragmentDirectiveContext {
	var p = new(FragmentDirectiveContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = gorchlangParserRULE_fragmentDirective

	return p
}

func (s *FragmentDirectiveContext) GetParser() antlr.Parser { return s.parser }

func (s *FragmentDirectiveContext) GetName() IStringLiteralContext { return s.name }

func (s *FragmentDirectiveContext) SetName(v IStringLiteralContext) { s.name = v }

func (s *FragmentDirectiveContext) ExedescStmt() IExedescStmtContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IExedescStmtContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IExedescStmtContext)
}

func (s *FragmentDirectiveContext) StringLiteral() IStringLiteralContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IStringLiteralContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IStringLiteralContext)
}

func (s *FragmentDirectiveContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *FragmentDirectiveContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *FragmentDirectiveContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(gorchlangListener); ok {
		listenerT.EnterFragmentDirective(s)
	}
}

func (s *FragmentDirectiveContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(gorchlangListener); ok {
		listenerT.ExitFragmentDirective(s)
	}
}

func (p *gorchlangParser) FragmentDirective() (localctx IFragmentDirectiveContext) {
	localctx = NewFragmentDirectiveContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, gorchlangParserRULE_fragmentDirective)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(87)
		p.Match(gorchlangParserT__6)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(88)
		p.Match(gorchlangParserT__1)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

	{
		p.SetState(89)

		var _x = p.StringLiteral()

		localctx.(*FragmentDirectiveContext).name = _x
	}

	{
		p.SetState(90)
		p.Match(gorchlangParserT__3)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(91)
		p.Match(gorchlangParserT__4)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(92)
		p.ExedescStmt()
	}
	{
		p.SetState(93)
		p.Match(gorchlangParserT__5)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IRegisterDirectiveContext is an interface to support dynamic dispatch.
type IRegisterDirectiveContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// GetPkg returns the pkg rule contexts.
	GetPkg() IStringLiteralContext

	// SetPkg sets the pkg rule contexts.
	SetPkg(IStringLiteralContext)

	// Getter signatures
	StringLiteral() IStringLiteralContext
	AllRegisterOperatorDirective() []IRegisterOperatorDirectiveContext
	RegisterOperatorDirective(i int) IRegisterOperatorDirectiveContext

	// IsRegisterDirectiveContext differentiates from other interfaces.
	IsRegisterDirectiveContext()
}

type RegisterDirectiveContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
	pkg    IStringLiteralContext
}

func NewEmptyRegisterDirectiveContext() *RegisterDirectiveContext {
	var p = new(RegisterDirectiveContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = gorchlangParserRULE_registerDirective
	return p
}

func InitEmptyRegisterDirectiveContext(p *RegisterDirectiveContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = gorchlangParserRULE_registerDirective
}

func (*RegisterDirectiveContext) IsRegisterDirectiveContext() {}

func NewRegisterDirectiveContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *RegisterDirectiveContext {
	var p = new(RegisterDirectiveContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = gorchlangParserRULE_registerDirective

	return p
}

func (s *RegisterDirectiveContext) GetParser() antlr.Parser { return s.parser }

func (s *RegisterDirectiveContext) GetPkg() IStringLiteralContext { return s.pkg }

func (s *RegisterDirectiveContext) SetPkg(v IStringLiteralContext) { s.pkg = v }
